# fit-company

./: .env  .env.sample  .gitignore  Dockerfile  coach.Dockerfile  docker-compose.yml  main_stats.py  nginx.conf  pyproject.toml  stats.Dockerfile
adr/: 02-coach-service-migration.md  02-queue-create-wod.md  03-queue-create-wod.md
docs/: 01-students_assignment.md
src/coach/: app.py  consumer.py  database.py  fitness_coach_service.py  fitness_data_init.py  fitness_service.py  models_db.py  rabbitmq_client.py  requirements.txt
src/coach/db_init_scripts/: init_muscle_groups_exercises.sql  init_tables.sql
src/coach_microservice/: Dockerfile  app.py  db.py  pyproject.toml  setup.py
src/coach_microservice/models/: __init__.py  models.py  models_dto.py
src/coach_microservice/schema/: dto.py
src/coach_microservice/services/: __init__.py  wod_service.py
src/cron_job/: .env.sample  cron_job.py
src/fit/: app.py  cron_job.py  database.py  models_db.py  models_dto.py  queue_messages.py
src/fit/blueprints/: __init__.py  auth.py  fitness.py  profile.py  user.py  user_blueprint.py  wod_bp.py  workout_blueprint.py
src/fit/queue/: rabbitmq.py
src/fit/services/: auth_service.py  fitness_coach_service.py  fitness_service.py  rabbitmq_service.py  user_service.py  workout_service.py
src/stats/: app.py  database.py  models_db.py  models_dto.py  queue_consumer.py  queue_message.py  stats_service.py
src/user_microservice/: Dockerfile  app.py  database.py  models_db.py  models_dto.py  pyproject.toml
tests/: conftest.py  test_user_api.py
tests/load/: load-test-k6.js
(+1 files in other folders)
